# GeoDash3D

./: .gitignore  Design Documentation.docx  LICENSE  README.md  ~$sign Documentation.docx
Project/: CMakeLists.txt  main.cpp
Project/Shaders/: basic.frag  basic.vert
Project/content/models/: cube.mtl
Project/include/: stb_image.h
Project/include/GLFW/: glfw3.h
Project/include/assimp/: DefaultIOSystem.h  IOSystem.hpp  MemoryIOWrapper.h  cexport.h  cimport.h
Project/include/glad/: glad.h
Project/libs/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp
Project/libs/imgui/backends/: imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_glfw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp  imgui_impl_win32.cpp
Project/resources/models/: cube.mtl
Project/shaders/: basic.vert  default.frag  default.vert  point_shadow_depth.fs  point_shadow_depth.gs  point_shadow_depth.vs  shadow_depth.fs  shadow_depth.vs
Project/src/: Camera.h  Component.h  ControllerComponenet.cpp  ControllerComponenet.h  ControllerComponent.cpp  Entity.cpp  Entity.h  RenderManager.h  StaticShapeComp.cpp  StaticShapeComp.h  main.cpp
Project/src/Components/: Component.cpp  Component.h  ControllerComponent.cpp  LightComp.cpp  LightComp.h  PhysicsComp.cpp  PhysicsComp.h  RadiusLightComp.cpp  RadiusLightComp.h  StaticMeshComp.cpp  StaticMeshComp.h  StaticShapeComp.cpp  StaticShapeComp.h
Project/src/Developer/: DevGui.cpp  DevGui.h  globals.h
Project/src/Entity/: Entity.cpp  Entity.h  LightEntity.cpp  LightEntity.h
Project/src/Managers/: IManager.h  LevelManager.h  ManagerRegistry.cpp  ManagerRegistry.h  PhysicsManager.cpp  PhysicsManager.h
Project/src/Physics/: AABB.h
Project/src/Rendering/: Camera.cpp  Camera.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h
Project/tests/: test_aabb.cpp
